--- a/caffeine/build.gradle
+++ b/caffeine/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.percolate.caffeine"
         minSdkVersion 14
         targetSdkVersion 20
-        versionCode 1
-        versionName "1.0"
+        versionCode 31
+        versionName "0.3.1"
     }
 
     sourceSets {
@@ -28,3 +28,12 @@ dependencies {
 task jar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
 }
+
+task makeJar(type: Copy) {
+    from('build/intermediates/bundles/release/')
+    into('../distribution')
+    include('classes.jar')
+    rename ('classes.jar', 'caffeine-' + android.defaultConfig.versionName + ".jar")
+}
+
+makeJar.dependsOn(build)
