--- a/caffeine/build.gradle
+++ b/caffeine/build.gradle
@@ -7,7 +7,7 @@ version '1.0-SNAPSHOT'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "23.0.3"
+    buildToolsVersion = "24.0.3"
 
     buildTypes {
         debug {
